Numpad shortcut keys don't work in webclient Case: SVY-2031